# quadson

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-can.txt  requirements-sim.txt  setup.py
bash/: set_udev_rules.sh
notebook/: leg_kinematics.ipynb
scripts/real/: set_stm32_id.py  test_leg_angle.py  test_leg_zero.py
scripts/sim/: test_gait.py  test_slider_ee_point.py
src/common/: body_kinematics.py  config.py  leg_kinematics.py  locomotion.py  logging_config.py
src/real/: can_config.py  can_message.py  leg.py  leg_group.py  motor.py  motor_manager.py  motor_manager_cando.py  motor_message.py  quadson.py
src/sim/: interface.py  leg.py  leg_group.py  motor.py  motor_manager.py  quadson.py  quadson_env.py  slider.py
tests/hybrid/: test_leg_ee_points.py
tests/real/: test_leg_angle.py  test_leg_zero.py  test_logging.py  test_motor_manager.py  test_motor_manager_cando.py  test_real_leggroup.py  test_zero.py  test_zero_lg.py
tests/sim/: analyze_gait_calibrated.py  analyze_stability.py  body_inv.py  single_leg.py  test_calibrated_gait.py  test_gait.py  test_slider_orientation.py  test_trained.py  train_ppo.py
